<resources>
    <string name="app_name">calculadora-saudavel</string>
    <string name="imc">IMC</string>
    <string name="tmb">TMB</string>
    <string name="imc_desc">Mussum Ipsum, cacilds vidis litro abertis. \n
        Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. \n
        Aenean sit amet nisi. Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis. \n
        Quem num gosta di mim que vai caçá sua turmis! Per aumento de cachacis, eu reclamis.</string>
    <string name="weight">Digite seu peso (kg) </string>
    <string name="height">Digite sua altura (cm)</string>
    <string name="calc">Calcular</string>
    <string name="fields_message">Todos os campos devem ser maiores que 0</string>
    <string name="imc_severely_lo_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito Abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Imc: %1$.2f</string>
    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso.</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">É o cálculo para descobrir a quantidade calórica que o corpo precisa de acordo com seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
</resources>
